--- a/gameengine-gwtrenderer/src/main/webapp/index.html
+++ b/gameengine-gwtrenderer/src/main/webapp/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no" />
     <meta http-equiv="Cache-Control" content="no-cache" />
-    <title>HTML5 Canvas Demo</title>
+    <title>Game Composer Example Game</title>
     <link type="text/css" rel="stylesheet" href="style.css">
     <script type="text/javascript" language="javascript" src="de.mirkosertic.gameengine.GWTRenderer/de.mirkosertic.gameengine.GWTRenderer.nocache.js"></script>
   </head>
@@ -16,5 +16,6 @@
       </div>
     </noscript>
     <div id="canvasholder"></div>
+    <div id="resourcecache"></div>
   </body>
 </html>
