Working on project site

--- a/index.html
+++ b/index.html
@@ -1,1 +1,137 @@
-"hello" 
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Mirko Sertic">
+    <link rel="shortcut icon" href="avicon.png">
+
+    <title>GameComposer. The free cross platform game creation system.</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="css/bootstrap.css" rel="stylesheet">
+
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+    <![endif]-->
+
+    <link href="css/carousel.css" rel="stylesheet">
+  </head>
+<!-- NAVBAR
+================================================== -->
+  <body>
+    <div class="navbar-wrapper">
+      <div class="container">
+
+        <div class="navbar navbar-inverse navbar-static-top" role="navigation">
+          <div class="container">
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="http://mirkosertic.github.io/GameComposer">GameComposer</a>
+            </div>
+            <div class="navbar-collapse collapse">
+              <ul class="nav navbar-nav">
+                <li class="active"><a href="#">Home</a></li>
+                <li><a href="https://github.com/mirkosertic/GameComposer" target="_blank">GitHub</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <!-- Marketing messaging and featurettes
+    ================================================== -->
+    <!-- Wrap the rest of the page in another container to center all the content. -->
+
+    <div class="container marketing">
+
+      <!-- Three columns of text below the carousel -->
+      <div class="row">
+        <div class="col-lg-4">
+          <img class="img-circle" src="images/zerocode.png" alt="Zero code">
+          <h2>Create Games without Coding</h2>
+          <p>Create games the visual way, without coding! GameComposer is a game creation system helping you to focus on what is really important: fun and gameplay, not technology.</p>
+        </div><!-- /.col-lg-4 -->
+        <div class="col-lg-4">
+          <img class="img-circle" src="images/platforms.png" alt="HTML5 and Android platforms">
+          <h2>Deploy to HTML5 and Android</h2>
+          <p>GameComposer games can be deployed to today available platforms. HTML5, Android and others.</p>
+        </div><!-- /.col-lg-4 -->
+        <div class="col-lg-4">
+          <img class="img-circle" src="images/havefun.png" alt="Have fun">
+          <h2>Have fun</h2>
+          <p>GameComposer is designed to support users with different level of experience. From beginner to professional, with GameComposer everyone can create a game in a minumum amount of time.</p>
+        </div><!-- /.col-lg-4 -->
+      </div><!-- /.row -->
+
+
+      <!-- START THE FEATURETTES -->
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-md-7">
+          <h2 class="featurette-heading">A modern Game Authoring System. <span class="text-muted">Running on Windows, Unix and Mac platforms.</span></h2>
+          <p class="lead">Developed with Java and based on JavaFX. The GameComposer IDE is the visual tool for cross platform game creation.</p>
+        </div>
+        <div class="col-md-5">
+          <img class="featurette-image img-responsive" src="images/ide.png" alt="Game authoring IDE">
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-md-5">
+          <img class="featurette-image img-responsive" src="images/performance.png" alt="High performance game engine">
+        </div>
+        <div class="col-md-7">
+          <h2 class="featurette-heading">High Performance Game Engine. <span class="text-muted">Ready for the Web and Mobile Devices. True Cross Platform!</span></h2>
+          <p class="lead">The GameComposer game engine is designed for high performance and extensibility. It has a flexible rule engine, support for physics, animations and all other cool stuff. No coding required!</p>
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-md-7">
+          <h2 class="featurette-heading">It is free. <span class="text-muted">And Open Source.</span></h2>
+          <p class="lead">No hidden fees and no vendor lockin. GameComposer is just free software. Get the sources and see for yourself!</p>
+        </div>
+        <div class="col-md-5">
+          <img class="featurette-image img-responsive" src="images/opensource.png" alt="Open source software">
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <!-- /END THE FEATURETTES -->
+
+
+      <!-- FOOTER -->
+      <footer>
+        <p class="pull-right"><a href="#">Back to top</a></p>
+        <p>&copy; 2013 Mirko Sertic. &middot;</p>
+      </footer>
+
+    </div><!-- /.container -->
+
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/holder.js"></script>
+  </body>
+</html>
