--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="col-lg-4">
           <img class="img-circle" src="images/havefun.png" alt="Have fun">
           <h2>Have fun</h2>
-          <p>GameComposer is designed to support users with different level of experience. From beginner to professional, with GameComposer everyone can create a game in a minumum amount of time.</p>
+          <p>GameComposer is designed to support users with different level of experience. From beginner to professional, with GameComposer everyone can create a game in a minimum amount of time.</p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
 
