--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       <!-- FOOTER -->
       <footer>
         <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2013 Mirko Sertic. &middot;</p>
+        <p>&copy; 2013 Mirko Sertic.</p>
       </footer>
 
     </div><!-- /.container -->
