Added sound support and did minor bugfixes. Also it now compiles to a fully working version using maven.

--- a/gameengine-dragomerenderer/src/main/webapp/index.html
+++ b/gameengine-dragomerenderer/src/main/webapp/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta http-equiv="X-UA-Compatible" content="IE=EDGE">
     <!-- <script type="text/javascript" src="dragome/dragome.js"></script> -->
     <script type="text/javascript" src="dragome-resources/dragome-debug.js"></script>
     <style>
