Working on TeaVM Renderer support

--- a/gameengine-dragomerenderer/src/main/webapp/index.html
+++ b/gameengine-dragomerenderer/src/main/webapp/index.html
@@ -36,7 +36,7 @@
         }());
     </script>
 </head>
-<body style="margin: 0; padding: 0;">
+<body>
     <div id="canvas">
     </div>
     <div id="logger" style="position: absolute; top: 50px; left: 50px; z-index: 10000; color:white;">
