--- a/gameengine-teavmrenderer/src/main/webapp/index.html
+++ b/gameengine-teavmrenderer/src/main/webapp/index.html
@@ -11,9 +11,35 @@
             overflow: hidden;
         }
     </style>
+    <script language="JavaScript">
+        (function() {
+            var lastTime = 0;
+            var vendors = ['ms', 'moz', 'webkit', 'o'];
+            for(var x = 0; x < vendors.length && !window.requestAnimationFrame; ++x) {
+                window.requestAnimationFrame = window[vendors[x]+'RequestAnimationFrame'];
+                window.cancelAnimationFrame = window[vendors[x]+'CancelAnimationFrame']
+                        || window[vendors[x]+'CancelRequestAnimationFrame'];
+            }
+            if (!window.requestAnimationFrame)
+                window.requestAnimationFrame = function(callback, element) {
+                    var currTime = new Date().getTime();
+                    var timeToCall = Math.max(0, 16 - (currTime - lastTime));
+                    var id = window.setTimeout(function() { callback(currTime + timeToCall); },
+                            timeToCall);
+                    lastTime = currTime + timeToCall;
+                    return id;
+                };
+            if (!window.cancelAnimationFrame)
+                window.cancelAnimationFrame = function(id) {
+                    clearTimeout(id);
+                };
+        }());
+    </script>
 </head>
 <body onload="main()">
     <div id="canvas">
+    </div>
+    <div id="logger" style="position: absolute; top: 50px; left: 50px; z-index: 10000; color:white;">
     </div>
 </body>
 </html>
