--- a/games/dukeplatform_teavm/index.html
+++ b/games/dukeplatform_teavm/index.html
@@ -11,6 +11,19 @@
             overflow: hidden;
             background-color: black;
         }
+
+        .mainCanvas {
+            border: 0;
+            padding: 0;
+            z-index: 99;
+            position: absolute;
+            top: 0px;
+            left: 0px;
+        }
+
+        .mainCanvas img {
+            display: none;
+        }
     </style>
     <script language="JavaScript">
         (function() {
@@ -40,7 +53,9 @@
 <body onload="main()">
     <div id="canvas">
     </div>
+    <canvas id="html5canvas" class="mainCanvas"/>
     <div id="logger" style="position: absolute; top: 50px; left: 50px; z-index: 10000; color:white;">
     </div>
+    <div id="resourcecache"></div>
 </body>
 </html>
