--- a/games/dukeplatform_teavm/index.html
+++ b/games/dukeplatform_teavm/index.html
@@ -21,7 +21,7 @@
             left: 0px;
         }
 
-        .mainCanvas img {
+        .resourcecache img {
             display: none;
         }
     </style>
@@ -51,8 +51,6 @@
     </script>
 </head>
 <body onload="main()">
-    <div id="canvas">
-    </div>
     <canvas id="html5canvas" class="mainCanvas"/>
     <div id="logger" style="position: absolute; top: 50px; left: 50px; z-index: 10000; color:white;">
     </div>
