Several optimizations for generated js size. Code updated for compatibility to last dragome version: using jsDelegates and checkcast disabled in compile time.

--- a/gameengine-dragomerenderer/src/main/webapp/index.html
+++ b/gameengine-dragomerenderer/src/main/webapp/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=EDGE">
     <!-- <script type="text/javascript" src="dragome/dragome.js"></script> -->
-    <script type="text/javascript" src="dragome-resources/dragome-debug.js"></script>
+<!--     <script type="text/javascript" src="dragome-resources/dragome-debug.js"></script> -->
+    <script type="text/javascript" src="dragome-resources/dragome-production.js"></script>
     <style>
         body {
             margin: 0;
