First demo code with working LUA integration.

--- a/gamecomposer/src/main/resources/ace/editor.html
+++ b/gamecomposer/src/main/resources/ace/editor.html
@@ -20,7 +20,7 @@
 
     var editor;
 
-    function initialize() {
+    function initeditor() {
         editor = ace.edit("editor");
         editor.setTheme("ace/theme/monokai");
         editor.getSession().setMode("ace/mode/lua");
