--- a/gameengine-teavmrenderer/src/main/webapp/index.html
+++ b/gameengine-teavmrenderer/src/main/webapp/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
+    <script src="https://cdn.firebase.com/js/client/2.2.2/firebase.js"></script>
     <script type="text/javascript" charset="utf-8" src="teavm/runtime.js"></script>
     <script type="text/javascript" charset="utf-8" src="teavm/classes.js"></script>
     <style>
