--- a/gamecomposer/src/main/resources/ace/editor.html
+++ b/gamecomposer/src/main/resources/ace/editor.html
@@ -38,6 +38,14 @@
     function getvalue() {
         return editor.getValue();
     }
+
+    function copyselection() {
+        return editor.getCopyText();
+    }
+
+    function pastevalue(aValue) {
+        editor.insert(aValue);
+    }
 </script>
 </body>
 </html>
