--- a/gameengine-teavmrenderer/src/main/webapp/index.html
+++ b/gameengine-teavmrenderer/src/main/webapp/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
+    <script type="text/javascript" charset="utf-8" src="pixi-min-3.0.11.js"></script>
     <script type="text/javascript" charset="utf-8" src="firebase-2.2.2.js"></script>
     <script type="text/javascript" charset="utf-8" src="teavm/runtime.js"></script>
     <script type="text/javascript" charset="utf-8" src="teavm/classes.js"></script>
@@ -53,6 +54,7 @@
 </head>
 <body onload="main()">
     <canvas id="html5canvas" class="mainCanvas"/>
+    <canvas id="html5canvas2" class="mainCanvas"/>
     <div id="resourcecache"></div>
     <div id="logger" style="position: absolute; top: 50px; left: 50px; z-index: 10000; color:white;">
     </div>
