Added pixi.js support to TeaVM Renderer

--- a/gameengine-teavmrenderer/src/main/webapp/index.html
+++ b/gameengine-teavmrenderer/src/main/webapp/index.html
@@ -54,9 +54,6 @@
 </head>
 <body onload="main()">
     <canvas id="html5canvas" class="mainCanvas"/>
-    <canvas id="html5canvas2" class="mainCanvas"/>
-    <div id="resourcecache"></div>
-    <div id="logger" style="position: absolute; top: 50px; left: 50px; z-index: 10000; color:white;">
-    </div>
+    <div id="logger" style="position: absolute; top: 50px; left: 50px; z-index: 10000; color:white;"></div>
 </body>
 </html>
