--- a/gameengine-teavmrenderer/src/main/webapp/index.html
+++ b/gameengine-teavmrenderer/src/main/webapp/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
     <script type="text/javascript" charset="utf-8" src="pixi-min-3.0.11.js"></script>
+    <script type="text/javascript" charset="utf-8" src="howler.core.min-2.0.0.js"></script>
     <script type="text/javascript" charset="utf-8" src="firebase-2.2.2.js"></script>
     <script type="text/javascript" charset="utf-8" src="teavm/runtime.js"></script>
     <script type="text/javascript" charset="utf-8" src="teavm/classes.js"></script>
@@ -21,10 +22,6 @@
             position: absolute;
             top: 0px;
             left: 0px;
-        }
-
-        .resourcecache img {
-            display: none;
         }
     </style>
     <script language="JavaScript">
