Extracted some common code

--- a/gameengine-editor/src/main/webapp/index.html
+++ b/gameengine-editor/src/main/webapp/index.html
@@ -4,6 +4,9 @@
         <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="css/style.css"/>
+        <script type="text/javascript" charset="utf-8" src="pixi-min-4.0.0-rc3.js"></script>
+        <script type="text/javascript" charset="utf-8" src="howler.core.min-2.0.0.js"></script>
+        <script type="text/javascript" charset="utf-8" src="firebase-2.2.2.js"></script>
         <script type="text/javascript" charset="utf-8" src="teavm/runtime.js"></script>
         <script type="text/javascript" charset="utf-8" src="teavm/classes.js"></script>
     </head>
