--- a/gameengine-editor/src/main/webapp/index.html
+++ b/gameengine-editor/src/main/webapp/index.html
@@ -1,99 +1,108 @@
 <html>
-    <head>
-        <title>GameEngine WebEditor</title>
-        <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="css/style.css"/>
-        <script type="text/javascript" charset="utf-8" src="pixi-min-4.0.0-rc3.js"></script>
-        <script type="text/javascript" charset="utf-8" src="howler.core.min-2.0.0.js"></script>
-        <script type="text/javascript" charset="utf-8" src="firebase-2.2.2.js"></script>
-        <script type="text/javascript" charset="utf-8" src="teavm/runtime.js"></script>
-        <script type="text/javascript" charset="utf-8" src="teavm/classes.js"></script>
-    </head>
-    <body onload="main()">
-        <div class="grid">
-            <div class="gridItem border-1 propertyEditor shrink width-3 min-width-3" id="objectEditor">
+<head>
+    <title>GameEngine WebEditor</title>
+    <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" href="css/style.css"/>
+    <script type="text/javascript" charset="utf-8" src="pixi-min-4.0.0-rc3.js"></script>
+    <script type="text/javascript" charset="utf-8" src="howler.core.min-2.0.0.js"></script>
+    <script type="text/javascript" charset="utf-8" src="firebase-2.2.2.js"></script>
+    <script type="text/javascript" charset="utf-8" src="teavm/runtime.js"></script>
+    <script type="text/javascript" charset="utf-8" src="teavm/classes.js"></script>
+</head>
+<body onload="main()">
+<div class="grid">
+    <div class="gridItem border-1 propertyEditor shrink width-3 min-width-3" id="objectEditor">
 
-                <div class="separatorlight">Common</div>
-                <div class="propertyEditor">
-                    <label>W:</label>
-                    <input id="test" type="text" value="text" class="width-4"/>
-                    <label>H:</label>
-                    <input id="test" type="text" value="text" class="width-4"/>
-                </div>
-                <div class="propertyEditor">
-                    <label>Test: </label>
-                    <input id="test" type="text" value="text"/>
-                </div>
-                <div class="propertyEditor">
-                    <input type="checkbox" value="Not selected"/>
-                    <label>Checkbox label</label>
-                </div>
-                <div class="separatorlight">Section1</div>
-                <div class="propertyEditor">
-                    <label>Color: </label>
-                    <select>
-                        <option>Value1</option>
-                        <option>Value2</option>
-                        <option>Value3</option>
-                    </select>
-                </div>
-                <div class="propertyEditor">
-                    <label>Color: </label>
-                    <input type="color"/>
-                </div>
-                <div class="propertyEditor">
-                    <label>Range: </label>
-                    <input type="range"/>
-                </div>
-            </div>
-            <canvas id="html5canvas" class="gridItem width-8 border-1 grow">
-                lala
-            </canvas>
-            <div class="gridItem width-2 border-1 shrink min-width-2">
-                <div class="separator">Objects</div>
-            </div>
+        <div class="separatorlight">Common</div>
+        <div class="propertyEditor">
+            <label>W:</label>
+            <input id="test" type="text" value="text" class="width-4"/>
+            <label>H:</label>
+            <input id="test" type="text" value="text" class="width-4"/>
         </div>
+        <div class="propertyEditor">
+            <label>Test: </label>
+            <input id="test" type="text" value="text"/>
+        </div>
+        <div class="propertyEditor">
+            <input type="checkbox" value="Not selected"/>
+            <label>Checkbox label</label>
+        </div>
+        <div class="separatorlight">Section1</div>
+        <div class="propertyEditor">
+            <label>Color: </label>
+            <select>
+                <option>Value1</option>
+                <option>Value2</option>
+                <option>Value3</option>
+            </select>
+        </div>
+        <div class="propertyEditor">
+            <label>Color: </label>
+            <input type="color"/>
+        </div>
+        <div class="propertyEditor">
+            <label>Range: </label>
+            <input type="range"/>
+        </div>
+    </div>
+    <canvas id="html5canvas" class="gridItem width-8 border-1 grow">
+        lala
+    </canvas>
+    <div class="gridItem width-3 border-1 shrink min-width-2 objectTree" id="objecttree">
+        <div class="separator">Objects</div>
+        <div class="level1">Item Level 1</div>
+        <div class="level2 selected">Item Level 2</div>
+        <div class="level3">Item Level 3</div>
+        <div class="level2">Item Level 2</div>
+        <div class="level2">Item Level 2</div>
+    </div>
+</div>
 
-        <template id="propertyMajorSeparator">
-            <div class="separator">{{title}}</div>
-        </template>
+<template id="majorSeparator">
+    <div class="separator">{{title}}</div>
+</template>
 
-        <template id="propertyMinorSeparator">
-            <div class="separatorlight">{{title}}</div>
-        </template>
+<template id="minorSeparator">
+    <div class="separatorlight">{{title}}</div>
+</template>
 
-        <template id="propertyTextEditor">
-            <div class="propertyEditor">
-                <label>{{label}}: </label>
-                <input id="{{id}}.text" type="text" value="replace me"/>
-            </div>
-        </template>
+<template id="propertyTextEditor">
+    <div class="propertyEditor">
+        <label>{{label}}: </label>
+        <input id="{{id}}.text" type="text" value="replace me"/>
+    </div>
+</template>
 
-        <template id="propertyBooleanEditor">
-            <div class="propertyEditor">
-                <input id="{{id}}.checkbox" type="checkbox"/>
-                <label>{{label}}</label>
-            </div>
-        </template>
+<template id="propertyBooleanEditor">
+    <div class="propertyEditor">
+        <input id="{{id}}.checkbox" type="checkbox"/>
+        <label>{{label}}</label>
+    </div>
+</template>
 
-        <template id="propertySizeEditor">
-            <div class="propertyEditor">
-                <label>W:</label>
-                <input id="{{id}}.width" type="text" value="text" class="width-4"/>
-                <label>H:</label>
-                <input id="{{id}}.height" type="text" value="text" class="width-4"/>
-            </div>
-        </template>
+<template id="propertySizeEditor">
+    <div class="propertyEditor">
+        <label>W:</label>
+        <input id="{{id}}.width" type="text" value="text" class="width-4"/>
+        <label>H:</label>
+        <input id="{{id}}.height" type="text" value="text" class="width-4"/>
+    </div>
+</template>
 
-        <template id="propertyPositionEditor">
-            <div class="propertyEditor">
-                <label>X:</label>
-                <input id="{{id}}.x" type="text" value="text" class="width-4"/>
-                <label>Y:</label>
-                <input id="{{id}}.y" type="text" value="text" class="width-4"/>
-            </div>
-        </template>
+<template id="propertyPositionEditor">
+    <div class="propertyEditor">
+        <label>X:</label>
+        <input id="{{id}}.x" type="text" value="text" class="width-4"/>
+        <label>Y:</label>
+        <input id="{{id}}.y" type="text" value="text" class="width-4"/>
+    </div>
+</template>
 
-    </body>
+<template id="treeitem">
+    <div class="level{{level}}">{{title}}</div>
+</template>
+
+</body>
 </html>
