--- a/gameengine-editor/src/main/webapp/gittest.html
+++ b/gameengine-editor/src/main/webapp/gittest.html
@@ -4,23 +4,16 @@
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="css/style.css"/>
+    <script type="text/javascript" charset="utf-8" src="teavm/runtime.js"></script>
+    <script type="text/javascript" charset="utf-8" src="teavm/classes.js"></script>
     <script src="https://npmcdn.com/github-api/dist/GitHub.bundle.min.js"></script>
 </head>
-<body>
+<body onload="main()">
     <script>
         // To obtain a reference to a directory named "projectHome" under the root filesystem directory you would use the following code.
 
         // http://stackoverflow.com/questions/25022016/get-all-file-names-from-a-github-repo-through-the-github-api
-        var passwordAuth = new GitHub();
 
-        var me = passwordAuth.getUser();
-        me.listRepos(function(err, result) {
-           alert(err + " " + result[0].name);
-        });
-        //me.listStarredRepos()
-          //      .then(function({data: reposJson}) {
-            //        console.log(`clayreimann has ${reposJson.length} repos!`);
-              //  });
-
+        //https://developer.github.com/v3/repos/contents/#get-contents
     </script>
 </html>
