Working on Drag & Drop support from Treeview

--- a/gameengine-editor/src/main/webapp/index.html
+++ b/gameengine-editor/src/main/webapp/index.html
@@ -114,5 +114,9 @@
     <div class="level{{level}}">{{title}}</div>
 </template>
 
+<template id="treeitemdraggable">
+    <div class="level{{level}}" draggable="true">{{title}}</div>
+</template>
+
 </body>
 </html>
