Working on Editor UI

--- a/gameengine-editor/src/main/webapp/index.html
+++ b/gameengine-editor/src/main/webapp/index.html
@@ -14,6 +14,7 @@
 <div class="grid flexVertical">
     <div class="gridItem border-1 propertyEditor shrink width-3 min-width-3" id="objectEditor">
 
+        <div class="separator">Editor</div>
         <div class="separatorlight">Common</div>
         <div class="propertyEditor">
             <label>W:</label>
