Added more features to object editor.

--- a/gameengine-editor/src/main/webapp/index.html
+++ b/gameengine-editor/src/main/webapp/index.html
@@ -111,6 +111,14 @@
     </div>
 </template>
 
+<template id="propertySelectionEditor">
+    <div class="propertyEditor">
+        <label>{{label}}:</label>
+        <select id="{{id}}.selection" selected>
+        </select>
+    </div>
+</template>
+
 <template id="treeitem">
     <div class="level{{level}}">{{title}}</div>
 </template>
