--- a/gameengine-editor/src/main/webapp/index.html
+++ b/gameengine-editor/src/main/webapp/index.html
@@ -102,7 +102,7 @@
             </span>
         </div>
 
-        <textfield-propertyeditor class="propertyEditor" label="test" value="17"/>
+        <textfield-propertyeditor label="test" value="17"/>
 
     </div>
     <div class="gridItem width-8 border-1 grow flexHorizontal">
